<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="flag_image">Flag Image</string>
    <string name="check">CHECK</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="trophy">trophy</string>
</resources>